--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -60,6 +60,7 @@ pipeline {
                 start_wca()
                 echo 'Start baseline workloads.'
                 start_workloads('twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra', "${LLC_COLLECT_SLEEP}")
+                calculate_precision()
             }
             post {
                 always {
