--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -59,7 +59,7 @@ pipeline {
                 reconfigure_wca()
                 start_wca()
                 echo 'Start baseline workloads.'
-                start_workloads("twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra", "${LLC_COLLECT_SLEEP}")
+                start_workloads("${EXTRA_ANSIBLE_PARAMS}", "twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra", "${LLC_COLLECT_SLEEP}")
                 calculate_precision()
             }
             post {
@@ -88,9 +88,9 @@ pipeline {
                     sh 'sed -i s/-C\\ %d\\;/-C\\ %d\\ -R\\ 2000\\;/g ./mutilate/mutilate.aurora'
                 }
                 echo 'Start baseline workloads.'
-				start_workloads("twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra", "${LLC_BASELINE_SLEEP}")
+				start_workloads("${EXTRA_ANSIBLE_PARAMS}", "twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra", "${LLC_BASELINE_SLEEP}")
 				echo 'Start contender workload.'
-				start_workloads("cassandra_stress--stress", "${LLC_CONTENDER_SLEEP}")
+				start_workloads("${EXTRA_ANSIBLE_PARAMS}", "cassandra_stress--stress", "${LLC_CONTENDER_SLEEP}")
                 calculate_precision()
             }
             post {
@@ -117,9 +117,9 @@ pipeline {
                 reconfigure_wca()
                 start_wca()
                 echo 'Start baseline workloads.'
-                start_workloads("specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress", "${MBW_BASELINE_SLEEP}")
+                start_workloads("${EXTRA_ANSIBLE_PARAMS}", "specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress", "${MBW_BASELINE_SLEEP}")
                 echo 'Start contender workload.'
-                start_workloads("tensorflow_benchmark_prediction", "${MBW_CONTENDER_SLEEP}")
+                start_workloads("${EXTRA_ANSIBLE_PARAMS}", "tensorflow_benchmark_prediction", "${MBW_CONTENDER_SLEEP}")
                 calculate_precision()
             }
             post {
@@ -191,9 +191,9 @@ def start_wca() {
     '''
 }
 
-def start_workloads(tags, sleep_time) {
+def start_workloads(extra_params, tags, sleep_time) {
     dir('prm/workload-collocation-agent/workloads'){
-        sh """ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${SCENARIO_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=${tags} -e \"${LABELS}\" ${WORKSPACE}/${PLAYBOOK}"""
+        sh """ansible-playbook  ${extra_params}  -i ${WORKSPACE}/${SCENARIO_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=${tags} -e \"${LABELS}\" ${WORKSPACE}/${PLAYBOOK}"""
         sleep sleep_time
     }
 
