--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -30,7 +30,14 @@ pipeline {
         stage('Build pex') {
             when { expression { return params.BUILD_PEX } }
             stages {
-                stage("Prepare venv && build pex") {
+                stage("Prepare venv && build pex | Mesos") {
+                    agent { label 'mesos' }
+                    steps {
+                        build_pex()
+                        }
+                    }
+                stage("Prepare venv && build pex | Kubernetes") {
+                    agent { label 'kubernetes' }
                     steps {
                         build_pex()
                         }
