--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
         MBW_CONTENDER_SLEEP = 5
         BUILD_COMMIT = "${GIT_COMMIT}"
         EXTRA_ANSIBLE_PARAMS = " "
+                                LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", build_scenario: \"$BUILD_SCENARIO\"}}"
     }
     options {
         disableConcurrentBuilds()
@@ -54,54 +55,47 @@ pipeline {
                 '''
             }
         }
-        stage("Run LLC Metrics Collection | Mesos") {
-            when { expression { return params.BUILD_LLC_MODEL } }
-            agent {label 'mesos'}
-            environment {
-                MESOS_MASTER_HOST = "${MESOS}"
-                MESOS_EXPECTED_TASKS = -1
-                INVENTORY='prm/demo_scenarios/common/inventory-mesos.yaml'
-                BUILD_SCENARIO = "llc"
-                SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", build_scenario: \"$BUILD_SCENARIO\"}}"
-            }
-            steps {
-                reconfigure_wca()
-                start_wca()
-                echo 'Start baseline workloads.'
-                start_workloads("${EXTRA_ANSIBLE_PARAMS}", "twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra", "${LLC_COLLECT_SLEEP}")
-                calculate_precision()
-            }
-            post {
-                always {
-                    clean("LLC", "llc_results.csv")
+
+        stage("Run LLC Metrics Collection") {
+            failFast true
+            parallel {
+                stage("Run LLC Metrics Collection | Mesos") {
+                    when { expression { return params.BUILD_LLC_MODEL } }
+                    agent {label 'mesos'}
+                    environment {
+                        MESOS_MASTER_HOST = "${MESOS}"
+                        MESOS_EXPECTED_TASKS = -1
+                        INVENTORY='prm/demo_scenarios/common/inventory-mesos.yaml'
+                        BUILD_SCENARIO = "llc"
+                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
+                    }
+                    steps {
+                        llc_metrics_collection()
+                    }
+                    post {
+                        clean("LLC", "llc_results.csv")
+                    }
+                }
+                stage("Run LLC Metrics Collection | Kubernetes") {
+                    when { expression { return params.BUILD_LLC_MODEL } }
+                    agent {label 'kubernetes'}
+                    environment {
+                        KUBERNETES_HOST = "${KUBERNETES}"
+                        KUBERNETES_EXPECTED_TASKS = -1
+                        INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
+                        BUILD_SCENARIO = "llc"
+                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
+                    }
+                    steps {
+                        llc_metrics_collection()
+                    }
+                    post {
+                        clean("LLC", "llc_results.csv")
+                    }
                 }
             }
         }
-        stage("Run LLC Metrics Collection | Kubernetes") {
-            when { expression { return params.BUILD_LLC_MODEL } }
-            agent {label 'kubernetes'}
-            environment {
-                KUBERNETES_HOST = "${KUBERNETES}"
-                KUBERNETES_EXPECTED_TASKS = -1
-                INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
-                BUILD_SCENARIO = "llc"
-                SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", build_scenario: \"$BUILD_SCENARIO\"}}"
-            }
-            steps {
-                reconfigure_wca()
-                start_wca()
-                echo 'Start baseline workloads.'
-                start_workloads("${EXTRA_ANSIBLE_PARAMS}", "twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra", "${LLC_COLLECT_SLEEP}")
-                calculate_precision()
-            }
-            post {
-                always {
-                    clean("LLC", "llc_results.csv")
-                }
-            }
-        }
+
         stage("Run LLC experiment | Mesos") {
             when { expression { return params.LLC } }
             agent {label 'mesos'}
@@ -323,4 +317,12 @@ def build_pex() {
         sh('make check')
         sh('make package')
         }
+}
+
+def llc_metrics_collection() {
+    reconfigure_wca()
+    start_wca()
+    echo 'Start baseline workloads.'
+    start_workloads("${EXTRA_ANSIBLE_PARAMS}", "twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra", "${LLC_COLLECT_SLEEP}")
+    calculate_precision()
 }
